# vestaboard-rs

./: .env.example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md
benchmark/: interpret.rs  vbml.rs
benchmark/data/: templates.json
benchmark/js/: index.js  package.json
src/: lib.rs  local.rs  rw.rs  subscription.rs
src/board/: char.rs  mod.rs
src/vbml/: format.rs  mod.rs
tests/: api.rs  board.rs  vbml.rs
tests/common/: dyn-size.json  mod.rs  vbml.json
